-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0, 5.11.1, 5.11.2, 5.11.3, 5.12.0
-
None
-
TI AM335x / BeagleBone Black
-
-
2e12bfdc1e537bb3cc027eed14500fe5724ab30f (qt/qtbase/5.12)
eglfs_kms fails to build for a platform where EGL_EXT_platform_base isn't defined. This is because of commit d47475bf658cb2dcb13ba74d74dd49287d9d213a "eglfs_kms: Move out window subclass from integration" which moved QEglFSKmsGbmWindow to it's own file but without the typedef for PFNEGLCREATEPLATFORMWINDOWSURFACEEXTPROC.
Please see attached patch.
For Gerrit Dashboard: QTBUG-72559 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
248246,2 | eglfs: avoid breaking builds without EGL_EXT_platform_base | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |